--- a/Gradient-blur/style.css
+++ b/Gradient-blur/style.css
@@ -3,40 +3,39 @@
     padding: 0;
     box-sizing: border-box;
     font-family: consolas;
-   
 }
 body{
     display: flex;
-    justify-content:center ;
+    justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #111;
+    /* background: #111; */
 }
 .container{
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px 0;
+    padding: 0px 40px;
+    display: relative;
     flex-wrap: wrap;
 }
 .container .box{
     position: relative;
+    height: 400px;
+    width: 320;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 320px;
-    height: 400px;
     color: #fff;
     background: #111;
-    margin: 20px 30px ;
+    /* background: #fff; */
+    margin: 20px 30px;
     transition: 0.5s;
-
 }
 .container .box:hover{
     transform: translateY(-20px);
-     
 }
+
 .container .box::before{
     content: "";
     position: absolute;
@@ -44,8 +43,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);;
-    
+    background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
 }
 .container .box::after{
     content: "";
@@ -54,29 +52,28 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);;
-    filter: blur(30px);
+    background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%);
+    filter: blur(20px);
 }
 .container .box:nth-child(2)::before{
-    background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+    background-image: linear-gradient(to top, #cc208e 0%, #6713d2 100%);
 }
 .container .box:nth-child(2)::after{
-    background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+    background-image: linear-gradient(to top, #cc208e 0%, #6713d2 100%);
 }
 .container .box:nth-child(3)::before{
-    background-image: linear-gradient(to top, #0fd850 0%, #f9f047 100%);
+    background-image: linear-gradient(to top, #9be15d 0%, #00e3ae 100%);
 }
 .container .box:nth-child(3)::after{
-    background-image: linear-gradient(to top, #0fd850 0%, #f9f047 100%);
+    background-image: linear-gradient(to top, #9be15d 0%, #00e3ae 100%);
 }
-
 .container .box span{
     position: absolute;
     top: 6px;
-    left: 6px;
     right: 6px;
+    left: 6px;
     bottom: 6px;
-    background: rgba(0,0,0,0.6);
+    background: rgba(255,255,255,0.6);
     z-index: 2;
 }
 .container .box span::before{
@@ -86,9 +83,8 @@ body{
     left: 0;
     width: 50%;
     height: 100%;
-    background: rgba(255,255,255,0.1);
+    background: rgba(255,255,255,0.5);
     pointer-events: none;
-
 }
 .container .box .content{
     z-index: 20;
@@ -97,26 +93,13 @@ body{
     padding-right: 40px;
     padding-top: 20px;
     padding-bottom: 20px;
-
 }
-.container .box .content h2{
-    font-size: 2em;
-    color: #fff;
-    margin-bottom: 10px;
-
+.container .box img{
+    display: flex;
+    justify-content: center;
 }
-.container .box .content p{
-    font-size:1.1em;
-    color: #fff;
-    margin-bottom: 10px;
-    line-height: 1.4em;
-}
-.container .box .content a {
-    display: inline-block;
-    font-size: 1.1em;
-    color: #111;
-    background: #fff;
-    padding: 10px;
-    text-decoration: none;
-    font-weight: 700;
+.container .box h1{
+    padding-top: 15px;
+    text-align: center;
+    color: rgb(71, 71, 71);
 }
